# polyBERT

./: .gitignore  README.md  job.sh  multitask_requirements.txt  pretrain_config.yaml  pyproject.toml  requirements.txt
model/: evaluate.py  evaluate_ds.py  finetune_classification.py  mask_dataset.py  polyBERT.py  pretrain_ds.py
polyBERT/: dataset.py  deepspeed_config.json  do_tokenize.py  evaluate.py  evaluate_ds.py  mask_evaluation.py  pretrain.py  pretrain_cpu.py  pretrain_ds.py  pretrain_info-Copy1.csv  pretrain_info.csv  regression.py  remote_ds.txt  run.ipynb  test.py  tokenise_evaluate.py  train_tokenizer.py  utility.py  zero3_config.json
polyBERT copy/data/: dataset.py
scripts/: evaluate.sh  evaluate_1M.sh  evaluate_ds.sh  mask_evaluation.sh  pretrain_ds.sh  test_evaluate.sh  tokenise.sh  tokenise_Evaluate.sh
tokeniser/: do_tokenize.py  train_tokenizer.py
utils/: data_utils.py  io_utils.py  model_utils.py
