[tool.poetry]
name = "polyBERT"
version = "0.1.0"
description = "polyBERT: A chemical language model to enable fully machine-driven ultrafast polymer informatics"
authors = ["Christopher Kuenneth <christopher.kuenneth@gmail.com>"]
readme = "README.md"
packages = [{include = "polyBERT"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.22.2"
sentencepiece = "^0.1.97"
datasets = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
